# TestNub

./: CMakeLists.txt  CliCentralApp.pro  LICENSE  main.cpp
doc/: keywords.txt
inc/: AutoTestLogging.h  IActionResolver.h  IAutoCLIInfo.h  IAutoEventsListener.h  IAutoGrammar.h  IAutoTestPlugin.h
src/: AutoTestHelperFuncs.cpp  AutoTestHelperFuncs.h  AutoTestTypes.h  InternalPlugin.cpp  InternalPlugin.h  PluginsManager.cpp  PluginsManager.h  TestCompiler.cpp  TestCompiler.h  TestLoader.cpp  TestLoader.h  TestManager.cpp  TestManager.h  TestRunner.cpp  TestRunner.h
